k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
spec:
  selector:
    app: mywebapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
